# tmcbs

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
notebooks/: 01_getting_started.ipynb  02_building_circuits.ipynb  03_reproduce_paper.ipynb  04_build_your_own.ipynb
scripts/: README.md  plot_results.ipynb  read_manual_results.ipynb  reproduce_fig3.sh  reproduce_fig4.sh  reproduce_fig5.sh
scripts/local/: reproduce_fig3.sh  reproduce_fig4.sh  reproduce_fig5.sh
scripts/slurm/: reproduce_fig3.sh  reproduce_fig4.sh  reproduce_fig5.sh
tests/: test_codes.py  test_decoding.py  test_experiments.py  test_mpi.py  test_runner.py
tmcbs/: __init__.py  codes.py  decoding.py  experiments.py  generalCircuitBuilder.py  general_circuit_builder_surface.py  runEbitExperimentMPI.py  run_ebit_experiment_mpi.py  runner.py
