[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tmcbs"
version = "0.1.0"
description = "Transversal Multiple Code Block Simulator: circuit-level simulation of distributed transversal fault-tolerant operations between surface and bivariate-bicycle codes."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    {name = "John Stack", email = "jstack@ncsu.edu"},
    {name = "Ming Wang"},
    {name = "Frank Mueller"},
]
keywords = [
    "quantum error correction",
    "distributed quantum computing",
    "fault tolerance",
    "surface codes",
    "qLDPC",
    "bivariate-bicycle codes",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "stim>=1.14",
    "sinter>=1.14",
    "numpy>=1.26",
    "scipy>=1.11",
    "tesseract-decoder",
    "ldpc>=2.3",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
mpi = ["mpi4py>=4.0"]
test = ["pytest>=7"]

[project.urls]
Paper = "https://arxiv.org/abs/2504.05611"

[tool.setuptools]
# TMCBS plus vendored helper modules derived from Gong et al.'s
# SlidingWindowDecoder.
packages = ["tmcbs", "third_party", "third_party.gong_sliding_window_decoder"]

[tool.setuptools.package-data]
"third_party.gong_sliding_window_decoder" = [
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE-2.0",
]
